--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nprogress": "^0.2.0",
     "swiper": "^5.3.8",
     "uuidjs": "^4.2.5",
+    "vee-validate": "^3.3.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuex": "^3.3.0"
